<?xml version="1.0"?>
<package format="2">
  <name>range_data_to_mavros</name>
  <version>1.0.0</version>
  <license>commercial</license>

  <description>Converts range data i.e. point cloud or lidar data to mavros obstacle distance messages.</description>

  <author email="erin@robotics88.com">Erin Linebarger</author>
  <maintainer email="erin@robotics88.com">Erin Linebarger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>mavros_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  

  <test_depend>roslaunch</test_depend>
</package>
